<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="introduction">How much should you tip?</string>
    <string-array name="locality">
        <item >NYC</item>
        <item >New York</item>
        <item >Nassau, NY</item>
        <item>Alabama</item>
		<item>Arizona</item>
		<item>Arkansas</item>
		<item>California</item>
		<item>Colorado</item>
		<item>Connecticut </item>
		<item>District of Columbia </item>
		<item>Florida</item>
		<item>Georgia</item>
		<item>Hawaii</item>
		<item>Idaho</item>
		<item>Illinois</item>
		<item>Indiana </item>
		<item>Iowa</item>
		<item>Kansas</item>
		<item>Kentucky</item>
		<item>Louisiana</item>
		<item>Maine </item>
		<item>Maryland </item>
		<item>Massachusetts </item>
		<item>Michigan </item>
		<item>Minnesota</item>
		<item>Mississippi </item>
		<item>Missouri </item>
		<item>Nebraska</item>
		<item>Nevada</item>
		<item>New Jersey </item>
		<item>New Mexico</item>
		<item>North Carolina</item>
		<item>North Dakota</item>
		<item>Ohio</item>
		<item>Oklahoma</item>
		<item>Pennsylvania</item>
		<item>Rhode Island </item>
		<item>South Carolina </item>
		<item>South Dakota</item>
		<item>Tennessee</item>
		<item>Texas</item>
		<item>Utah</item>
		<item>Vermont</item>
		<item>Virginia</item>
		<item>Washington</item>
		<item>West Virginia </item>
		<item>Wisconsin</item>
		<item>Wyoming</item>
        <item >Custom</item>
    </string-array>
    <integer-array name="salesTaxRate">
        <item >8875</item>
        <item >4000</item>
        <item >8675</item>
		<item>4000</item>
		<item>6600</item>
		<item>6000</item>
		<item>7500</item>
		<item>2900</item>
		<item>6350</item>
		<item>6000</item>
		<item>6000</item>
		<item>4000</item>
		<item>4000</item>
		<item>6000</item>
		<item>6250</item>
		<item>7000</item>
		<item>6000</item>
		<item>6300</item>
		<item>6000</item>
		<item>4000</item>
		<item>5000</item>
		<item>6000</item>
		<item>6250</item>
		<item>6000</item>
		<item>6875</item>
		<item>7000</item>
		<item>4225</item>
		<item>5500</item>
		<item>6850</item>
		<item>7000</item>
		<item>5125</item>
		<item>4750</item>
		<item>5000</item>
		<item>5500</item>
		<item>4500</item>
		<item>6000</item>
		<item>7000</item>
		<item>6000</item>
		<item>4000</item>
		<item>7000</item>
		<item>6250</item>
		<item>5950</item>
		<item>6000</item>
		<item>5000</item>
		<item>6500</item>
		<item>6000</item>
		<item>5000</item>
		<item>4000</item>
    </integer-array>
    <string name="taxRate">Tax Rate: </string>
    <string name="tipRate">Tip Rate: </string>
    <string name="price">Price: </string>
    <string name="tipLabel">Tip: </string>
    <string name="totalLabel">You pay: </string>
    <string name="defaultNum">0.00</string>
    <string name="calculateLabel">Calculate!</string>
    <string-array name="tipRate">
        <item >15</item>
        <item >20</item>
        <item >10</item>
        <item >5</item>
        <item>Custom</item>
    </string-array>
    <string name="taxLabel">Tax: </string>
    <string name="default_price">0.00</string>
    <string name="splitAmount">Split:</string>
    <string name="defaultInteger">0</string>
    <string-array name="splitBetween">
        <item >Self</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >Custom</item>
    </string-array>
    <string name="splitLabel">Each Pay:</string>

</resources>